--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-color": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@uiw/react-md-editor": "^4.0.5",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.1",
