--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/core": "^2.11.7",
     "@tiptap/extension-color": "^2.11.7",
+    "@tiptap/extension-font-family": "^2.11.7",
     "@tiptap/extension-link": "^2.11.7",
     "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-text-style": "^2.11.7",
+    "@tiptap/extension-typography": "^2.11.7",
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
