--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-font-family": "^2.11.7",
     "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-table": "^2.11.9",
+    "@tiptap/extension-table-cell": "^2.11.9",
+    "@tiptap/extension-table-header": "^2.11.9",
+    "@tiptap/extension-table-row": "^2.11.9",
     "@tiptap/extension-text-align": "^2.11.7",
     "@tiptap/extension-text-style": "^2.11.7",
     "@tiptap/extension-typography": "^2.11.7",
