--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
