--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tiptap/core": "^2.11.7",
     "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-font-family": "^2.11.7",
+    "@tiptap/extension-image": "^3.9.0",
     "@tiptap/extension-link": "^2.11.7",
     "@tiptap/extension-table": "^2.11.9",
     "@tiptap/extension-table-cell": "^2.11.9",
