--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.4",
+    "dotenv": "^17.2.3",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
